# effektprognoser

./: .coverage  .gitignore  README.md  README_bk.md  index.html  pyproject.toml  requirements.txt  run_all.sh
data/background/: Skane_och_RSS.gpkg  natomraden.gpkg
effektprognoser/: cli.py  geometry.py  logger.py  paths.py  qc.py  regions.py  save.py  sqlite.py  utils.py
effektprognoser/anomalies/: app.py
effektprognoser/csv_to_excel/: app.py
effektprognoser/geo/: load_geo_data.py
effektprognoser/geometry/: __init__.py  data_loader.py  tools.py
effektprognoser/parquet_to_category/: main.py  postprocess.py
effektprognoser/parquet_to_excel/: data_processing.py  excel_utils.py  main.py  utils.py
effektprognoser/parquet_to_excel_regioner/: main.py  make_excel.py
effektprognoser/pipelines/: parquet_to_excel.py  plot_rutid.py  quality_check.py  sqltable_to_parquet.py
effektprognoser/plot_rutid/: app.py  data_processing.py  database.py  main.py  visualization.py
effektprognoser/qc/: app.py  (+7 more)
ep/: config.py  files.py  layers.py  logger.py
js/: legend.js  load_granser.js  loader.js  patterns.js  styles.js
log/: qc_log.csv
notebooks/: 2025-04-24-kommun.ipynb  create_test_data.ipynb
scripts/: all.sh  config.sh  generate_test_data.py  install.sh  list_cli_commands.sh  list_processing_steps.sh  open_parquet.ipynb  parquet2products.sh  run_full.sh  run_full_parquet_process.sh  run_full_sql2parquet.sh  sql2parquet.sh
tests/: test_end2end.py  test_files.py  test_parquet2geojson.py  test_parquet2kommun.py  test_sql2parquet.py  test_sql2parquet_chunk.py
(+355 files in other folders)
